Removed Top, upgraded port dec, removed idfdef(s)

--- a/CoCo3FPGA/coco3fpga_dw.qsf
+++ b/CoCo3FPGA/coco3fpga_dw.qsf
@@ -87,11 +87,12 @@ set_location_assignment PIN_F2 -to AUD_BCLK
 set_location_assignment PIN_D1 -to AUD_DACDAT
 set_location_assignment PIN_E3 -to AUD_DACLRCK
 set_location_assignment PIN_E1 -to AUD_XCK
-set_location_assignment PIN_B10 -to BLUE0
-set_location_assignment PIN_A10 -to BLUE1
-set_location_assignment PIN_C11 -to BLUE2
-set_location_assignment PIN_B11 -to BLUE3
-set_location_assignment PIN_R24 -to BUTTON_N[3]
+set_location_assignment PIN_B10 -to BLUE[0]
+set_location_assignment PIN_A10 -to BLUE[1]
+set_location_assignment PIN_C11 -to BLUE[2]
+set_location_assignment PIN_B11 -to BLUE[3]
+set_location_assignment PIN_R24 -to COCO_RESET_N
+#set_location_assignment PIN_R24 -to BUTTON_N[3]
 set_location_assignment PIN_N21 -to BUTTON_N[2]
 set_location_assignment PIN_M21 -to BUTTON_N[1]
 set_location_assignment PIN_M23 -to BUTTON_N[0]
@@ -143,10 +144,10 @@ set_location_assignment PIN_Y17 -to GPIO[3]
 set_location_assignment PIN_AB21 -to GPIO[2]
 set_location_assignment PIN_AC15 -to GPIO[1]
 set_location_assignment PIN_AB22 -to GPIO[0]
-set_location_assignment PIN_G8 -to GREEN0
-set_location_assignment PIN_G11 -to GREEN1
-set_location_assignment PIN_F8 -to GREEN2
-set_location_assignment PIN_H12 -to GREEN3
+set_location_assignment PIN_G8 -to GREEN[0]
+set_location_assignment PIN_G11 -to GREEN[1]
+set_location_assignment PIN_F8 -to GREEN[2]
+set_location_assignment PIN_H12 -to GREEN[3]
 set_location_assignment PIN_G13 -to H_SYNC
 set_location_assignment PIN_A8 -to I2C_DAT
 set_location_assignment PIN_B7 -to I2C_SCL
@@ -220,10 +221,10 @@ set_location_assignment PIN_AF8 -to RAM0_CS_N
 #set_location_assignment PIN_AH3 -to RAM0_DATA[0]
 #set_location_assignment PIN_AD5 -to RAM0_OE_N
 #set_location_assignment PIN_AE8 -to RAM0_RW_N
-set_location_assignment PIN_E12 -to RED0
-set_location_assignment PIN_E11 -to RED1
-set_location_assignment PIN_D10 -to RED2
-set_location_assignment PIN_F12 -to RED3
+set_location_assignment PIN_E12 -to RED[0]
+set_location_assignment PIN_E11 -to RED[1]
+set_location_assignment PIN_D10 -to RED[2]
+set_location_assignment PIN_F12 -to RED[3]
 set_location_assignment PIN_AF22 -to RST
 set_location_assignment PIN_AA5 -to SDRAM_ADDRESS[11]
 set_location_assignment PIN_R5 -to SDRAM_ADDRESS[10]
@@ -369,18 +370,18 @@ set_location_assignment PIN_F15 -to LEDR[14]
 set_location_assignment PIN_G15 -to LEDR[15]
 set_location_assignment PIN_G16 -to LEDR[16]
 set_location_assignment PIN_H15 -to LEDR[17]
-set_location_assignment PIN_G10 -to RED4
-set_location_assignment PIN_J12 -to RED5
-set_location_assignment PIN_H8 -to RED6
-set_location_assignment PIN_H10 -to RED7
-set_location_assignment PIN_C8 -to GREEN4
-set_location_assignment PIN_B8 -to GREEN5
-set_location_assignment PIN_F10 -to GREEN6
-set_location_assignment PIN_C9 -to GREEN7
-set_location_assignment PIN_A11 -to BLUE4
-set_location_assignment PIN_C12 -to BLUE5
-set_location_assignment PIN_D11 -to BLUE6
-set_location_assignment PIN_D12 -to BLUE7
+set_location_assignment PIN_G10 -to RED[4]
+set_location_assignment PIN_J12 -to RED[5]
+set_location_assignment PIN_H8 -to RED[6]
+set_location_assignment PIN_H10 -to RED[7]
+set_location_assignment PIN_C8 -to GREEN[4]
+set_location_assignment PIN_B8 -to GREEN[5]
+set_location_assignment PIN_F10 -to GREEN[6]
+set_location_assignment PIN_C9 -to GREEN[7]
+set_location_assignment PIN_A11 -to BLUE[4]
+set_location_assignment PIN_C12 -to BLUE[5]
+set_location_assignment PIN_D11 -to BLUE[6]
+set_location_assignment PIN_D12 -to BLUE[7]
 set_location_assignment PIN_C10 -to VGA_SYNC_N
 set_location_assignment PIN_F11 -to VGA_BLANK_N
 set_location_assignment PIN_A12 -to VGA_CLK
@@ -425,4 +426,5 @@ set_global_assignment -name QIP_FILE ../CoCO3FPGA_Common/disk02.qip
 set_global_assignment -name QIP_FILE ../CoCo3FPGA_Common/disk02_02.qip
 set_global_assignment -name QIP_FILE ../CoCO3FPGA_Common/PH2_CLK.qip
 set_global_assignment -name MIF_FILE ../CoCO3FPGA_Common/disk02_02.mif
+set_global_assignment -name SMART_RECOMPILE OFF
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
