--- a/CoCo3FPGA/coco3fpga_dw.qsf
+++ b/CoCo3FPGA/coco3fpga_dw.qsf
@@ -220,6 +220,13 @@ set_location_assignment PIN_AF8 -to RAM0_CS_N
 #set_location_assignment PIN_AH3 -to RAM0_DATA[0]
 #set_location_assignment PIN_AD5 -to RAM0_OE_N
 #set_location_assignment PIN_AE8 -to RAM0_RW_N
+set_location_assignment PIN_D9 -to PROBE[6]
+set_location_assignment PIN_E10 -to PROBE[5]
+set_location_assignment PIN_F14 -to PROBE[4]
+set_location_assignment PIN_H14 -to PROBE[3]
+set_location_assignment PIN_H13 -to PROBE[2]
+set_location_assignment PIN_J14 -to PROBE[1]
+set_location_assignment PIN_J10 -to PROBE[0]
 set_location_assignment PIN_E12 -to RED[0]
 set_location_assignment PIN_E11 -to RED[1]
 set_location_assignment PIN_D10 -to RED[2]
@@ -390,11 +397,14 @@ set_global_assignment -name TIMEQUEST_MULTICORNER_ANALYSIS ON
 set_global_assignment -name NUM_PARALLEL_PROCESSORS 8
 set_global_assignment -name SMART_RECOMPILE OFF
 set_location_assignment PIN_M23 -to EE
-set_global_assignment -name OPTIMIZATION_MODE "AGGRESSIVE PERFORMANCE"
+set_global_assignment -name OPTIMIZATION_MODE BALANCED
+set_global_assignment -name SAVE_DISK_SPACE OFF
+set_global_assignment -name ENABLE_SIGNALTAP OFF
+set_global_assignment -name USE_SIGNALTAP_FILE MISTer.stp
+set_global_assignment -name VERILOG_FILE ../CoCO3FPGA_Common/por.v
 set_global_assignment -name VHDL_FILE ../CoCO3FPGA_Common/CPU09/cpu09l_128a.vhd
 set_global_assignment -name VHDL_FILE ../CoCO3FPGA_Common/sram/coco_ram.vhd
 set_global_assignment -name VHDL_FILE ../CoCO3FPGA_Common/rom/coco_rom.vhd
-set_global_assignment -name VHDL_FILE ../CoCO3FPGA_Common/Counter_Display.vhd
 set_global_assignment -name VERILOG_FILE ../CoCO3FPGA_Common/COCO3GEN.v
 set_global_assignment -name MIF_FILE ../CoCO3FPGA_Common/coco3gen.mif
 set_global_assignment -name VERILOG_FILE ../CoCO3FPGA_Common/PS2_Key/ps2_keyboard.v
@@ -418,9 +428,6 @@ set_global_assignment -name VERILOG_FILE ../CoCO3FPGA_Common/UART_6850/6850RX.v
 set_global_assignment -name VERILOG_FILE ../CoCO3FPGA_Common/UART_6551/uart_6551.v
 set_global_assignment -name VERILOG_FILE ../CoCO3FPGA_Common/UART_6551/6551tx.v
 set_global_assignment -name VERILOG_FILE ../CoCO3FPGA_Common/UART_6551/6551rx.v
-set_global_assignment -name VERILOG_FILE ../CoCO3FPGA_Common/SPI/SDCard.v
-set_global_assignment -name VHDL_FILE ../CoCO3FPGA_Common/SDRAM_CONTROLLER/sdramcntl.vhd
-set_global_assignment -name VHDL_FILE ../CoCO3FPGA_Common/SDRAM_CONTROLLER/common.vhd
 set_global_assignment -name SDC_FILE coco3fpga_dw.sdc
 set_global_assignment -name VERILOG_FILE coco3fpga_dw.v
 set_global_assignment -name QIP_FILE ../CoCO3FPGA_Common/UART_CLK.qip
